--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha08'
     implementation 'com.google.android.gms:play-services-fitness:21.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
