Fix NULL Results in passed Intent's Bundle when start FacilityDetailsActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MapsActivity" android:parentActivityName=".MainActivity"/>
+        <activity android:name=".FacilityDetailsActivity" android:parentActivityName=".MainActivity"/>
     </application>
 
 </manifest>
