--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -15,11 +19,13 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
 
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
+
         <activity
-            android:name=".LoginActivity"
+            android:name=".views.LoginActivity"
             android:exported="true"
             android:launchMode="singleTop">
             <intent-filter>
@@ -28,11 +34,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MapsActivity" android:parentActivityName=".LoginActivity"/>
-        <activity android:name=".RegisterUserActivity" />
-        <activity android:name=".ProfileActivity" />
-        <activity android:name=".EmergencyContactsActivity"/>
-        <activity android:name=".FacilityDetailsActivity" android:parentActivityName=".MapsActivity"/>
+        <activity
+            android:name=".views.MapsActivity"
+            android:parentActivityName="views.LoginActivity" />
+        <activity android:name=".views.RegisterUserActivity" />
+        <activity android:name=".views.ProfileActivity" />
+        <activity android:name=".views.EmergencyContactsActivity" />
+        <activity
+            android:name=".views.FacilityDetailsActivity"
+            android:parentActivityName=".views.MapsActivity" />
+        <activity
+            android:name=".views.EmergencyMessageActivity"
+            android:exported="false"
+            android:parentActivityName=".views.MapsActivity" />
     </application>
 
 </manifest>
