--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
     id 'androidx.navigation.safeargs'
     id 'com.google.gms.google-services'
+
 }
 
 android {
@@ -17,6 +18,10 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField("String", "MAPS_API_KEY", "xxx")
+        buildConfigField("String", "DATABASE_URL", "yyy")
+
     }
 
     buildTypes {
@@ -54,6 +59,7 @@ dependencies {
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'com.google.android.libraries.places:places:3.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha08'
     implementation 'com.google.android.gms:play-services-fitness:21.1.0'
     implementation 'com.google.maps.android:android-maps-utils:2.4.0'
     implementation 'com.github.ivbaranov:materialfavoritebutton:0.1.5'
@@ -63,6 +69,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.ivbaranov:materialfavoritebutton:0.1.5'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.2.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
