added “<activity android:name=".ForgotPasswordActivity"/>” to the manifests page, otherwise forgot password page crashes~\

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
             android:name=".views.EmergencyMessageActivity"
             android:exported="false"
             android:parentActivityName=".views.MapsActivity" />
+        <activity android:name=".views.ForgotPasswordActivity"/>
     </application>
 
 </manifest>
